--- a/.verb.md
+++ b/.verb.md
@@ -2,6 +2,16 @@
 
 ```js
 var dateHelpers = require('{%= name %}');
+var Permalinks = require('permalinks');
+var permalinks = new Permalinks();
+
+permalinks.use(dateHelpers());
+var file = {path: 'posts/about.md', data: {date: '2017-02-02'}};
+permalinks.format(':year/:month/:day/:stem/index.html');
+//=> '2017/02/02/about/index.html'
+
+permalinks.format(':date("YYYY/MM/DD")/:stem/index.html');
+//=> '2017/02/02/about/index.html'
 ```
 
 ## Helpers
