--- a/.verb.md
+++ b/.verb.md
@@ -19,15 +19,15 @@ permalinks.format(':date("YYYY/MM/DD")/:stem/index.html');
 
 ## Variables
 
-In addition to the [date](#date) helper, the following variables will be exposed on the context (these aren't helpers, just strings):
+In addition to the [date](#date) helper itself, the following variables will be exposed on the context as a result of registering the `date` helper (these aren't helpers, just strings):
 
-**Name** | **Description** | **Example**
---- | --- | ---
-`:year` | Published year of posts (4-digit) | `2017`
-`:month` | Published month of posts (2-digit) | `09`
-`:i_month` | Published month of posts (Without leading zeros) | `9`
-`:day` | Published day of posts (2-digit) | `02`
-`:i_day` | Published day of posts (Without leading zeros) | `2`
-`:hour` | Hour of the day | `11`
-`:minute` | Minute of the hour | `15`
-`:second` | Second of the minute | `45`
+| **Name** | **Description** | **Example** |
+| --- | --- | --- |
+| `:year` | Published year of posts (4-digit) | `2017` |
+| `:month` | Published month of posts (2-digit) | `09` |
+| `:i_month` | Published month of posts (Without leading zeros) | `9` |
+| `:day` | Published day of posts (2-digit) | `02` |
+| `:i_day` | Published day of posts (Without leading zeros) | `2` |
+| `:hour` | Hour of the day | `11` |
+| `:minute` | Minute of the hour | `15` |
+| `:second` | Second of the minute | `45` |
